--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -22,7 +22,7 @@
 @import "./elements/badges";
 
 //Pages
-@import "./pages-style/my-styleguide";
+;
 @import "./pages-style/landing-page";
 
 @import "./pages-style/order-summary";
