--- a/styles/sass/base/_global.scss
+++ b/styles/sass/base/_global.scss
@@ -1,24 +1,43 @@
-*{
+* {
     margin: 0;
-    padding:0;
+    padding: 0;
     box-sizing: border-box;
 
     scrollbar-width: thin;
     scrollbar-color: darkgrey lightgrey;
-  
+
 
 }
-html{
+
+html {
     font-size: 16px;
-    
+
 }
-body{
+
+body {
     height: 100vh;
     font-family: 'Inter', sans-serif;
-  
-       p{
-        cursor: default; 
-       } 
 
-  
+    p {
+        cursor: default;
+    }
+
+    .action-btn:hover {
+        background-color: #2c8568 !important;
+        // color: black !important;
+    }
+
+    .action-btn:active {
+        background-color: #56ab8f !important;
+        color: black !important;
+
+    }
+    .action-btn:focus{
+        border: 1px solid rgb(21, 121, 87) !important;
+        outline: none; /* Removes default browser outline */
+        box-shadow: 0 0 0 3px rgba(181, 241, 211, 0.5); /* Adds a custom focus outline */
+        background-color: rgb(3, 68, 46) !important;
+        color: white !important;  
+    }
+
 }
