--- a/styles/sass/components/_header.scss
+++ b/styles/sass/components/_header.scss
@@ -111,7 +111,7 @@ header{
     justify-content: start;
     gap: 1rem;
 }
-.shopart-logo{
+.shopcart-logo{
     height: 43px;
     width: 190px;
     img{
@@ -124,6 +124,8 @@ header{
     text-decoration: none;
     color: black;
     font-size: 14px;
+    padding: .5rem;
+    border-radius: 1.5rem;
     @media(max-width:576px) {
         display: none;
      }
@@ -131,6 +133,13 @@ header{
         width: 26px;
         height: 26PX;
     }
+}
+.account-btn:hover{
+    background-color: rgb(236, 236, 236);
+
+}
+.account-btn:active{
+    background-color: rgb(221, 221, 221);
 }
 .btn.cart-btn{
     border: unset !important;
@@ -143,6 +152,15 @@ header{
         width: 26px;
         height: 26PX;
     }
+
+}
+.btn.cart-btn:hover{
+    background-color: rgb(236, 236, 236);
+    border-radius: 1.5rem;
+}
+.btn.cart-btn:active{
+    background-color: rgb(221, 221, 221);
+   
 }
 .search-product{
     position: relative;
@@ -205,18 +223,37 @@ header{
     }
    
 }
-.Category-text{
+.nav-tabs-head{
     text-decoration: none;
     color: black;
     margin-bottom: .25rem !important;
     grid-column: 1/3;
-   
+   padding: .5rem;
 }
+// .nav-tabs-head:hover{
+//     background-color: rgb(236, 236, 236);
+//     border-radius: 1.5rem;
+// }
+// .nav-tabs-head:active{
+//     background-color: rgb(221, 221, 221);
+   
+// }
+.nav-header:hover{
+    background-color: rgb(236, 236, 236);
+        border-radius: 1.5rem;
+}
+.nav-header:active{
+    background-color: rgb(221, 221, 221);
+}
+
+
+
 .menu-name{
     text-align: center;
     color: white;
 }
-.secondary-dropdown{
+
+.category-dropdown-menu{
     display: none;
     width: 48rem;
     // height: 24rem;
@@ -226,14 +263,22 @@ header{
     gap: 1rem;
     border-radius: .5rem;
     position: absolute;
-    top: 40px;
+    top: 45px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    border: unset;
    
    
    
 }
-// .dropdown{
-
-// }
+.nav-img-container{
+ width: 4rem;
+ height: 4rem;
+ img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+ }
+}
 a{
     display: block;
 }
@@ -242,6 +287,8 @@ a{
     display: grid;
     position: unset;
     top: unset;
+    border-radius: .5rem;
+    padding: .5rem .5rem .5rem 1rem;
     li{
         list-style: none;
     }
@@ -282,12 +329,16 @@ a{
     align-items: center;
     justify-content: start;
     gap: 1rem;
-    background-color: rgb(241, 239, 239);
+    background-color: rgb(250, 250, 250);
     border-radius: .25rem;
     width: 100%;
     padding-inline: 1rem;
     padding-block: .2rem;
 }
+.dropdown-list:hover{
+ background-color: rgb(235, 235, 235);
+}
+
 .Category-link-content{
     span{
         font-weight: 600;
@@ -318,6 +369,14 @@ a{
         height: 24px;
         fill: black;
     }
+ }
+ .humburger-menu:hover{
+    background-color:rgb(236, 236, 236);
+    border-radius: .2rem;
+ }
+
+ .humburger-menu:active{
+    background-color:rgb(219, 219, 219);
  }
  .mobile-view-nav{
     display: grid;
