--- a/styles/sass/main.css
+++ b/styles/sass/main.css
@@ -18,6 +18,20 @@ body {
 body p {
   cursor: default;
 }
+body .action-btn:hover {
+  background-color: #2c8568 !important;
+}
+body .action-btn:active {
+  background-color: #56ab8f !important;
+  color: black !important;
+}
+body .action-btn:focus {
+  border: 1px solid rgb(21, 121, 87) !important;
+  outline: none; /* Removes default browser outline */
+  box-shadow: 0 0 0 3px rgba(181, 241, 211, 0.5); /* Adds a custom focus outline */
+  background-color: rgb(3, 68, 46) !important;
+  color: white !important;
+}
 
 .text-sm-1 {
   font-size: 0.625rem;
@@ -2973,11 +2987,11 @@ header .header-contents {
   gap: 1rem;
 }
 
-.shopart-logo {
+.shopcart-logo {
   height: 43px;
   width: 190px;
 }
-.shopart-logo img {
+.shopcart-logo img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -2987,6 +3001,8 @@ header .header-contents {
   text-decoration: none;
   color: black;
   font-size: 14px;
+  padding: 0.5rem;
+  border-radius: 1.5rem;
 }
 @media (max-width: 576px) {
   .account-btn {
@@ -2996,6 +3012,14 @@ header .header-contents {
 .account-btn svg {
   width: 26px;
   height: 26PX;
+}
+
+.account-btn:hover {
+  background-color: rgb(236, 236, 236);
+}
+
+.account-btn:active {
+  background-color: rgb(221, 221, 221);
 }
 
 .btn.cart-btn {
@@ -3011,6 +3035,15 @@ header .header-contents {
 .btn.cart-btn svg {
   width: 26px;
   height: 26PX;
+}
+
+.btn.cart-btn:hover {
+  background-color: rgb(236, 236, 236);
+  border-radius: 1.5rem;
+}
+
+.btn.cart-btn:active {
+  background-color: rgb(221, 221, 221);
 }
 
 .search-product {
@@ -3051,11 +3084,21 @@ header .header-contents {
   position: relative;
 }
 
-.Category-text {
+.nav-tabs-head {
   text-decoration: none;
   color: black;
   margin-bottom: 0.25rem !important;
   grid-column: 1/3;
+  padding: 0.5rem;
+}
+
+.nav-header:hover {
+  background-color: rgb(236, 236, 236);
+  border-radius: 1.5rem;
+}
+
+.nav-header:active {
+  background-color: rgb(221, 221, 221);
 }
 
 .menu-name {
@@ -3063,7 +3106,7 @@ header .header-contents {
   color: white;
 }
 
-.secondary-dropdown {
+.category-dropdown-menu {
   display: none;
   width: 48rem;
   padding: 2rem;
@@ -3071,7 +3114,19 @@ header .header-contents {
   gap: 1rem;
   border-radius: 0.5rem;
   position: absolute;
-  top: 40px;
+  top: 45px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+  border: unset;
+}
+
+.nav-img-container {
+  width: 4rem;
+  height: 4rem;
+}
+.nav-img-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 a {
@@ -3083,6 +3138,8 @@ a {
   display: grid;
   position: unset;
   top: unset;
+  border-radius: 0.5rem;
+  padding: 0.5rem 0.5rem 0.5rem 1rem;
 }
 .mobile-view-dropdown li {
   list-style: none;
@@ -3128,11 +3185,15 @@ a {
   align-items: center;
   justify-content: start;
   gap: 1rem;
-  background-color: rgb(241, 239, 239);
+  background-color: rgb(250, 250, 250);
   border-radius: 0.25rem;
   width: 100%;
   padding-inline: 1rem;
   padding-block: 0.2rem;
+}
+
+.dropdown-list:hover {
+  background-color: rgb(235, 235, 235);
 }
 
 .Category-link-content span {
@@ -3166,6 +3227,15 @@ a {
   width: 24px;
   height: 24px;
   fill: black;
+}
+
+.humburger-menu:hover {
+  background-color: rgb(236, 236, 236);
+  border-radius: 0.2rem;
+}
+
+.humburger-menu:active {
+  background-color: rgb(219, 219, 219);
 }
 
 .mobile-view-nav {
@@ -3357,36 +3427,6 @@ a {
   font-weight: 500;
 }
 
-.global-container {
-  background-color: white;
-  display: grid;
-  grid-template-columns: 15rem 1fr 15rem;
-  margin: auto;
-  border: 1px solid gray;
-  padding: 1rem;
-}
-.global-container .color-platte-container {
-  display: flex;
-}
-.global-container .color-platte-container .color-platte {
-  width: 6rem;
-  height: 3rem;
-}
-.global-container .main-container {
-  grid-column: 2/3;
-  border-inline: 1px solid gray;
-  width: 100%;
-  padding-inline: 1rem;
-}
-.global-container .text-size-container {
-  display: flex;
-  gap: 2rem;
-  align-items: center;
-}
-.global-container .text-size-container div:first-child {
-  width: 5rem;
-}
-
 .hero-section {
   margin-bottom: 80px;
   grid-template-rows: 400px;
@@ -3511,6 +3551,25 @@ a {
   justify-content: center !important;
   background-color: white !important;
   color: black !important;
+  border: unset !important;
+}
+
+.learn-more-btn:hover {
+  background-color: rgb(14, 75, 55) !important;
+  color: white !important;
+}
+
+.learn-more-btn:active {
+  background-color: rgb(1, 24, 16) !important;
+  color: white !important;
+}
+
+.learn-more-btn:focus {
+  border: 1px solid rgb(21, 121, 87) !important;
+  outline: none; /* Removes default browser outline */
+  box-shadow: 0 0 0 3px rgba(181, 241, 211, 0.5); /* Adds a custom focus outline */
+  background-color: rgb(3, 68, 46) !important;
+  color: white !important;
 }
 
 .main-container {
@@ -3577,6 +3636,11 @@ a {
   object-fit: cover;
 }
 
+.shop-categ-card:hover {
+  transform: translatey(-15px);
+  transition: 0.5s;
+}
+
 .Trending-Products-container {
   grid-column: 2/3;
 }
@@ -3593,6 +3657,11 @@ a {
 .card-product-img img {
   height: 100%;
   width: 100%;
+}
+
+.card-product-img:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 
 .Trending-Products {
@@ -4065,6 +4134,11 @@ input[type=date] {
   object-fit: cover;
 }
 
+.product-colors-img:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
+}
+
 .product-details-section {
   padding: 0rem 3rem 2rem 3rem;
 }
@@ -4125,25 +4199,28 @@ input[type=date] {
 .color-options div {
   width: 2.5rem;
   height: 2.5rem;
-  background: #d27f78;
+  background: #efcc10;
   border-radius: 2rem;
 }
 .color-options div:nth-of-type(2) {
-  background-color: rgb(63, 61, 61);
+  background-color: rgb(75, 103, 109);
 }
 .color-options div:nth-of-type(3) {
-  background-color: #afbfab;
+  background-color: #b45014;
 }
 .color-options div:nth-of-type(4) {
-  background-color: #30506c;
+  background-color: #f8ad8e;
 }
-.color-options div:hover {
-  border: 1px solid black;
+
+.color-option:hover {
+  border: 2px solid black;
 }
-.color-options div:active {
-  border: 1px solid black;
+
+.color-option:active {
+  border: 2px solid black;
 }
-.color-options div:focus {
+
+.color-option:focus {
   outline: 2px solid black;
   outline-offset: 2px;
   outline-style: dotted;
@@ -4200,7 +4277,7 @@ input[type=date] {
 }
 
 .decrement-input:hover {
-  background-color: #F5F5F5;
+  background-color: #e9e9e9;
 }
 
 .input-group {
@@ -4256,10 +4333,6 @@ input[type=date] {
   justify-content: center !important;
   color: white !important;
   background-color: #003d29 !important;
-}
-
-.action-btn:hover {
-  background-color: #08553b !important;
 }
 
 .product-list-main-container {
@@ -4409,6 +4482,9 @@ input[type=date] {
 
 .product-card {
   position: relative;
+  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
+  border-radius: 0.5rem;
+  overflow: hidden;
 }
 
 .product-img-container {
@@ -4428,6 +4504,11 @@ input[type=date] {
   width: 100%;
 }
 
+.product-img-container:hover {
+  transform: scale(1.1);
+  transition: 0.5s;
+}
+
 .wishlist-heart {
   position: absolute;
   top: 7px;
@@ -4439,6 +4520,10 @@ input[type=date] {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.product-card-content {
+  padding: 0.5rem 1rem 1rem 1rem;
 }
 
 .product-card-title {
