--- a/styles/sass/main.css
+++ b/styles/sass/main.css
@@ -4487,7 +4487,7 @@ input[type=date] {
 
 .product-card {
   position: relative;
-  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
   border-radius: 0.5rem;
   overflow: hidden;
 }
@@ -4528,7 +4528,7 @@ input[type=date] {
 }
 
 .product-card-content {
-  padding: 0.5rem 1rem 1rem 1rem;
+  padding: 1rem;
 }
 
 .product-card-title {
